Fix to code chunks in text

--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -79,6 +79,8 @@ a {
 code {
     background: $wonderGrey100;
     font-size:0.95rem;
+    white-space: pre;
+    word-break: normal;
 }
 
 pre code {
