Update post, mailchimp form

--- a/post.hbs
+++ b/post.hbs
@@ -118,7 +118,10 @@ into the {body} of the default.hbs template --}}
               <div class="m-subscribe-section__text">
                 <h4 class="m-subscribe-section__title">{{t "Subscribe to our newsletter"}}</h4>
                 <p class="m-subscribe-section__description">
-                  {{t "We'll send you our latest blog posts and product updates. Unsubscribe anytime."}}
+                  We'll use your email address to send you newsletters, blog posts and product updates. You can unsubscribe any time.
+                </p>
+                <p class="m-small-text">
+                    See our <a href="/privacy">privacy policy</a> for how we use your data. Your information is shared with our marketing email platform Mailchimp, view their <a href="https://mailchimp.com/legal/privacy/">privacy policy</a> for details.
                 </p>
               </div>
               <div class="m-subscribe-section__form">
