--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -3,7 +3,12 @@
     <form action="https://wonderproxy.us18.list-manage.com/subscribe/post?u=0a89f4a58084a23782b261b16&amp;id=120f27642f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate m-subscribe-section__form" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll" class="form-newsletter">
             <label class="sr-only" for="mce-EMAIL">Subscribe</label>
+            <!-- Email Input -->
             <input type="email" value="" name="EMAIL" class="m-input in-subscribe-section" id="mce-EMAIL" placeholder="Enter your email address" required>
+            <!-- GDPR Input -->
+            <fieldset class="mc_fieldset gdprRequired mc-field-group m-subscribe-checkbox__fieldset" name="interestgroup_field">
+                <label class="checkbox subfield" for="gdpr_59907"><input type="checkbox" id="gdpr_59907" name="gdpr[59907]" value="Y" class="av-checkbox gdpr" required><span> Send me emails from WonderProxy</span> </label>
+            </fieldset>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0a89f4a58084a23782b261b16_120f27642f" tabindex="-1" value=""></div>
             <div class="clear">
@@ -11,4 +16,5 @@
             </div>
         </div>
     </form>
-</div>
+</div> 
+
