--- a/src/sass/common/_variables.scss
+++ b/src/sass/common/_variables.scss
@@ -39,7 +39,11 @@ $mobile-space: 20px;
 $mobile-bar-height: 50px;
 $desktop-bar-height: 64px;
 
+/* Local development path */
+
 // $image_path: '/assets/images';
 // $font_path: '/assets/fonts';
+
+/* Production path */
 $image_path : '/blog/assets/images';
 $font_path: '/blog/assets/fonts';
