Update link colour

--- a/src/sass/components/ui/_small-text.scss
+++ b/src/sass/components/ui/_small-text.scss
@@ -2,6 +2,10 @@
   color: var(--placeholder);
   font-size: 0.875rem;
 
+  a {
+    color: var(--link-color);
+  }
+
   &.in-subscribe-page {
     padding-top: 30px;
     font-weight: 600;
